public/studentsubmission/Logs/demo1/[1][54690853][demo1][h][A].c.log
Compile Error
[1][54690853][demo1][h][A].c:3:1: error: unknown type name 'using'
 using namespace std;
 ^~~~~
[1][54690853][demo1][h][A].c:3:17: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'std'
 using namespace std;
                 ^~~
